# scalable-zip-fs

./: .gitignore  README.md  meson.build
include/: fuse_ops.hpp  utils.hpp  zipent.hpp  zipfs.hpp
src/: fuse_ops.cpp  main.cpp  main_optimizer.cpp  utils.cpp  zip_optimizer.cpp  zipent.cpp
tests/: README.md  run_all_tests.sh  test_filesystem.sh  test_integration.sh  test_optimizer.sh  test_pathsplit.cpp
